--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -8,31 +8,14 @@
     android:gravity="center_horizontal"
     tools:context=".TabToday">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/weather_panel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
     <android.support.constraint.ConstraintLayout
         android:id="@+id/weather_panel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -133,7 +116,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Wind"
+                android:text="@string/tab_text_wind"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
@@ -155,7 +138,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pressure"
+                android:text="@string/tab_text_pressure"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
@@ -177,7 +160,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Humidity"
+                android:text="@string/tab_text_Humidity"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
@@ -199,7 +182,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sunrise"
+                android:text="@string/tab_text_Sunrise"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
@@ -221,7 +204,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Sunset"
+                android:text="@string/tab_text_Sunset"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
@@ -243,7 +226,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Geo coords"
+                android:text="@string/tab_text_Geocoords"
                 android:textColor="#333333"
                 android:textSize="20sp" />
 
